# file-agent

./: 1  PLATFORM (2).md  README (2).md  ni  字符串常量池与String.intern.md
agent-skill-optimizer/: SKILL.md
agent-skill-optimizer/references/: architecture-patterns.md  creator-pipeline.md  cross-platform-notes.md  description-trigger-optimization.md  output-evaluation-rubric.md  safety-and-permissions.md
agent-skill-optimizer/scripts/: generate_eval_queries.py  (+3 more)
dedup-service/: .env.example  .gitignore  README.md  pyproject.toml  setup.cfg
dedup-service-docker-hyperv/: .env.example  Dockerfile  README.md  docker-compose.override.example.yml  docker-compose.yml
dedup-service/app/: __init__.py  config.py  database.py  main.py  schemas.py
dedup-service/app/chunking/: markdown_chunker.py
dedup-service/app/clustering/: __init__.py  cluster_builder.py  union_find.py
dedup-service/app/detectors/: __init__.py  exact_detector.py  minhash_detector.py
dedup-service/app/fingerprints/: __init__.py  hash_utils.py  minhash_utils.py
dedup-service/app/models/: __init__.py  chunk.py  document.py  duplicate.py
dedup-service/app/parsers/: doc_parser.py
dedup-service/app/recommendations/: __init__.py  canonical_selector.py  reorg_suggester.py
dedup-service/app/reports/: markdown_report.py
dedup-service/app/services/: dedup_analysis_service.py  process_service.py  scan_service.py
dedup-service/app/sources/: __init__.py  local_scanner.py
dedup-service/tests/: test_chunker.py  test_hash_utils.py  test_reorg_suggester.py  test_union_find.py
skills/: skill指导.md
(+68 files in other folders)
