[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dedup-service"
version = "0.1.0"
description = "Enterprise document deduplication and reorganization MVP"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.29.0",
  "SQLAlchemy>=2.0.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.0",
  "docling>=2.0.0",
  "datasketch>=1.6.5",
  "beautifulsoup4>=4.12.0",
  "markdown>=3.6",
  "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "httpx>=0.27.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
