[metadata]
name = dedup-service
version = 0.1.0
description = Enterprise document deduplication and reorganization MVP

[options]
packages = find:
python_requires = >=3.11
install_requires =
    fastapi>=0.111.0
    uvicorn[standard]>=0.29.0
    SQLAlchemy>=2.0.0
    pydantic>=2.7.0
    pydantic-settings>=2.2.0
    docling>=2.0.0
    datasketch>=1.6.5
    beautifulsoup4>=4.12.0
    markdown>=3.6
    python-multipart>=0.0.9

[options.packages.find]
where = .
include = app*

[options.extras_require]
dev =
    pytest>=8.0.0
    httpx>=0.27.0
